# my-arithmetic-ethan

./: .coverage  .gitlab-ci.yml  LICENSE.txt  README.md  config.toml  coverage.xml  pyproject.toml
.github/workflows/: main.yml
docs/source/: conf.py  index.rst  modules.rst  my_arithmetic_ethan.rst
src/my_arithmetic_ethan/: __about__.py  __init__.py  gcd.py
tests/: test_gcd.py
